--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,12 @@
 language: ruby
 rvm:
   - "1.9.3"
+bundler_args: "--without development"
+script:
+  - RAILS_ENV=test bundle exec rake db:migrate --trace
+  - bundle exec rake db:test:prepare
 before_script:
+  - "cp config/database.example.yml config/database.yml"
   - "mysql -e 'create database bertukar_test;'"
 notifications:
   email: false
