--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ script:
   - RAILS_ENV=test bundle exec rake db:migrate --trace
   - bundle exec rake db:test:prepare
 before_script:
-  - "cp config/database.example.yml config/database.yml"
+  - "cp config/database.yml.example config/database.yml"
   - "mysql -e 'create database bertukar_test;'"
 notifications:
   email: false
