--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,9 @@
 language: ruby
 rvm:
   - "1.9.3"
-bundler_args: "--without development"
+bundler_args: "--without development production"
 script:
   - RAILS_ENV=test bundle exec rake db:migrate --trace
-  - bundle exec rake db:test:prepare
 before_script:
   - "cp config/database.yml.sample config/database.yml"
   - "mysql -e 'create database bertukar_test;'"
-notifications:
-  email: false
