--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,8 @@ language: ruby
 rvm:
   - "1.9.3"
 bundler_args: "--without development production"
-script:
-  - RAILS_ENV=test bundle exec rake db:migrate --trace
 before_script:
   - "cp config/database.yml.sample config/database.yml"
   - "mysql -e 'create database bertukar_test;'"
+notifications:
+  email: false
