--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ rvm:
 bundler_args: "--without development production"
 script:
   - RAILS_ENV=test bundle exec rake db:migrate --trace
+  - bundle exec rake test
 before_script:
   - "cp config/database.yml.sample config/database.yml"
   - "mysql -e 'create database bertukar_test;'"
