--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,4 @@ before_script:
   - "cp config/database.yml.sample config/database.yml"
   - "mysql -e 'create database bertukar_test;'"
 notifications:
-  email: false
+  on_success: never
